adds new supporters to brighton

--- a/src/pages/brighton-and-hove/local-funders/index.hbs
+++ b/src/pages/brighton-and-hove/local-funders/index.hbs
@@ -38,11 +38,27 @@ location: brighton-and-hove
         <div class="block__section">
           <h2 class="h2">Organisations</h2>
           <article>
+            <img style="width: 170px;" src="/assets/img/brighton-logos/brighton-and-hove-buses.png" alt="">
+            <h3 class="h3">Brighton & Hove Buses</h3>
+            <p>We are part of the <a target="_blank" href="https://www.go-ahead.com/">Go-Ahead Group Ltd</a> – one of the five largest transport groups within the UK responsible for bus and rail services. The company believes passionately in supporting local community initiatives that tackle inequality and need in the city of Brighton Hove.</p>
+            <a class="btn btn--brand-d btn--full-inline" target="blank" href="https://www.buses.co.uk/">
+              <span class="btn__text">More information about Brighton & Hove Buses</span>
+            </a>
+          </article>
+          <article>
             <img style="width: 300px;" src="/assets/img/brighton-logos/emmaus-bh.jpg" alt="">
             <h3 class="h3">Proudly supporting the homeless of Brighton and Hove for the last 25 years.</h3>
             <p>Emmaus communities provide a home and meaningful work to people who have experienced homelessness and social exclusion.</p>
             <a class="btn btn--brand-d btn--full-inline" target="blank" href="https://www.emmausbrighton.co.uk">
               <span class="btn__text">More information about Emmaus Community</span>
+            </a>
+          </article>
+          <article>
+            <img style="width: 300px;" src="/assets/img/brighton-logos/enjoolata.png" alt="">
+            <h3 class="h3">Enjoolata Foundation</h3>
+            <p>Enjoolata Foundation is an independent, grant-making charity based on the south coast of England. Their aim is to promote positive social and environmental change through the funding of bold ideas and innovations.</p>
+            <a class="btn btn--brand-d btn--full-inline" target="blank" href="https://enjoolata.org/">
+              <span class="btn__text">More information about Enjoolata Foundation</span>
             </a>
           </article>
           <article>
@@ -67,6 +83,14 @@ location: brighton-and-hove
             <p>Safe Haven Sussex provides accommodation, care and support for single individuals aged 18 and over who are homeless or facing homelessness, and who have support needs. Our accommodation and support covers Brighton and Hove and the surrounding areas with the aim to provide safe accommodation and support the resident holistically to enable them to move on to fully independent living adding value to the community.</p>
             <a class="btn btn--brand-d btn--full-inline" target="blank" href="https://www.safehavensussex.org.uk/">
               <span class="btn__text">More information about Safe Haven Sussex</span>
+            </a>
+          </article>
+          <article>
+            <img style="width: 300px;" src="/assets/img/brighton-logos/scf-logo.png" alt="">
+            <h3 class="h3">Sussex Community Foundation</h3>
+            <p>Sussex Community Foundation is a registered charity that exists to make Sussex a fairer and more equal place. We do this by enabling local people to support local causes, making grants to small charities and voluntary groups working in communities across Sussex.</p>
+            <a class="btn btn--brand-d btn--full-inline" target="blank" href="https://sussexgiving.org.uk/">
+              <span class="btn__text">More information about the Sussex Community Foundation</span>
             </a>
           </article>
           <article>
