updates chelmsford col advice

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -245,6 +245,13 @@ location: chelmsford
         <li>Creates development opportunities for disadvantaged young people from local areas this may include giving aid including fresh food, toys, school equipment and uniform, volunteering and organising events for the younger children and have a summer scheme.</li>
       </ul>
 
+      <h2 class="h2">St Francis Community Pop-up Food Store</h2>
+      <ul>
+        <li>Tuesday 9.00am – 11.00am at Ford End Village Hall, Main Road, Ford End, Chelmsford, CM3 1LQ</li>
+        <li>Tuesday 2.00pm – 4.00pm at St Andrews Church Hall, Chignal Road, Melbourne, Chelmsford, CM1 2JB</li>
+      </ul>
+      <h3 class="h3">A Helping hand with your weekly shop.</h3>
+      <p>First visit, you pay a one-off £10.00 membership fee, you will receive a special pop-up store bag-for-life and your first shop. Subsequent visits, you bring your pop-up shopping bag to fill with shopping, you pay £5.00 and receive shopping worth £20.00 - £30.00. There is also a welcome space for a cuppa and a chat.</p>
     </div>
   </div>
 {{> social-share}}
