updates cov swep

--- a/src/pages/coventry/severe-weather-accommodation/index.hbs
+++ b/src/pages/coventry/severe-weather-accommodation/index.hbs
@@ -28,7 +28,9 @@ location: coventry
     <div class="block__content">
 
       <h3 class="h2">Hot weather provisions</h3>
-      <p>Due to the hot weather that has been forecast for over the recently, SWEP has been activated with immediate effect, please advise anyone sleeping rough to go to STEPs for change (City Arcade, Coventry CV1 3HX) or to Harnall Lifehouse (44 Harnall Ln W, Coventry CV1 4EZ) for shade, sun cream and refreshments.</p>
+      <p>During times of hot weather, when Coventry activates SWEP, please advice anyone sleeping rough to go to:</p>
+      <p>STEPs for change.<br>City Arcade<br>Coventry<br>CV1 3HX <p>OR</p><p>Harnall Lifehouse<br>44 Harnall Ln W<br>Coventry<br>CV1 4EZ</p>
+      <p>Where free shade, sun cream and refreshments are all available.</p>
 
       <h3 class="h2">Cold weather provisions</h3>
       <p>During the colder months SWEP means that you don't need to rough sleep. If you are rough sleeping and the temperature drops to freezing, or rain or snow is severe you can access somewhere to sleep for the night.</p>
