updates all streetlink sleeping rough banners

--- a/src/pages/bcp/severe-weather-accommodation/index.hbs
+++ b/src/pages/bcp/severe-weather-accommodation/index.hbs
@@ -40,7 +40,7 @@ location: bcp
       <ul>
         <li>Contact BCPSOS team on <a href="tel:01202 315962">01202 315962</a> or email <a href="mailto:b&pstreetoutreach@mungos.org">b&pstreetoutreach@mungos.org</a></li>
         <li>Dial 999 if someone needs emergency help.</li>
-        <li>Remember that <a href="https://www.streetlink.org.uk/">Streetlink</a> is not an emergency service - we do not get the referrals immediately so it's best to use <a href="tel:01202315962">01202 315962</a> during periods that SWEP is activated.</li>
+        <li>Remember that <a href="https://thestreetlink.org.uk/start">Streetlink</a> is not an emergency service - we do not get the referrals immediately so it's best to use <a href="tel:01202315962">01202 315962</a> during periods that SWEP is activated.</li>
       </ul>
     </div>
   </div>
