--- a/src/pages/blackpool/index.hbs
+++ b/src/pages/blackpool/index.hbs
@@ -43,7 +43,7 @@ location: blackpool
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Blackpool, you can alert the Council directly on <a href="tel:01253477908">01253 477908</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Blackpool, you can alert the Council directly on <a href="tel:01253477908">01253 477908</a>. Alternatively, you can inform <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/blackpool/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
