--- a/src/pages/bolton/index.hbs
+++ b/src/pages/bolton/index.hbs
@@ -43,7 +43,7 @@ location: bolton
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bolton, you can alert the Council by emailing <a href="mailto:streetlife@urbanoutreach.co.uk">streetlife@urbanoutreach.co.uk</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bolton, you can alert the Council by emailing <a href="mailto:streetlife@urbanoutreach.co.uk">streetlife@urbanoutreach.co.uk</a>. Alternatively, you can inform <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/bolton/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
