--- a/src/pages/brighton-and-hove/index.hbs
+++ b/src/pages/brighton-and-hove/index.hbs
@@ -43,7 +43,7 @@ location: brighton-and-hove
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough ANYWHERE in Brighton & Hove, you can inform <a href="https://www.streetlink.org.uk/">StreetLink </a>on their website or by downloading the StreetLink App from Apple's <a href="https://apps.apple.com/gb/app/streetlink/id587543230">App store </a>or <a href="https://play.google.com/store/apps/details?id=co.uk.precedent.streetlink&hl=en_GB&gl=US">Google Play</a> on Android. It will be necessary to register once but the App stays logged in.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough ANYWHERE in Brighton & Hove, you can inform <a href="https://thestreetlink.org.uk">StreetLink </a>on their website.</p>
       <p class="sleeping-rough-title__content">If you think the person is in immediate danger or needs urgent care please telephone <a href="tel:999">999</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/brighton-and-hove/advice">
         <span class="btn__text">See more emergency advice</span>
