--- a/src/pages/leeds/index.hbs
+++ b/src/pages/leeds/index.hbs
@@ -55,7 +55,7 @@ location: leeds
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Leeds, you can you can let the Street Outreach Service (SOS) team know by emailing <a href="mailto:leeds.sos@cgl.org.uk">leeds.SOS@cgl.org.uk</a> or by calling <a href="tel:01132459445">0113 245 9445</a>. Alternatively you can infrom Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>. If you see someone at night please call the Out of Hours number on <a href="tel:07891273939">07891 273939</a></p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Leeds, you can you can let the Street Outreach Service (SOS) team know by emailing <a href="mailto:leeds.sos@cgl.org.uk">leeds.SOS@cgl.org.uk</a> or by calling <a href="tel:01132459445">0113 245 9445</a>. Alternatively you can infrom <a href="https://thestreetlink.org.uk">Streetlink</a>. If you see someone at night please call the Out of Hours number on <a href="tel:07891273939">07891 273939</a></p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/leeds/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
