--- a/src/pages/nottingham/index.hbs
+++ b/src/pages/nottingham/index.hbs
@@ -54,7 +54,7 @@ location: nottingham
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Nottingham, you can alert the council via their <a href="https://www.nottinghamcity.gov.uk/roughsleeping">website</a> or by calling the street outreach team directly on <a href="tel:08000665356">0800 066 5356</a>. Alternatively, you can use the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Nottingham, you can alert the council via their <a href="https://www.nottinghamcity.gov.uk/roughsleeping">website</a> or by calling the street outreach team directly on <a href="tel:08000665356">0800 066 5356</a>. Alternatively, you can use <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/nottingham/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
