--- a/src/pages/reading/severe-weather-accommodation/index.hbs
+++ b/src/pages/reading/severe-weather-accommodation/index.hbs
@@ -53,7 +53,7 @@ location: reading
         <li>Out of Hours (from 5:00pm) please call Reading’s Emergency Duty Service on <a href="tel:01344 786 543">01344 786 543</a>.</li>
       </ul>
       <h2 class="h2">If you are concerned about some sleeping rough tonight, you can:</h2>
-      <p>Alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via Streetlink by downloading <a href="https://www.streetlink.org.uk/">the Streetlink app</a>.</p>
+      <p>Alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <h3 class="h3">For more info on SWEP, you can read our blog <a href="">here</a></h3>
       <p><strong>Please do not just turn up at the Willow House as you will be refused entry. Everyone must be referred and assessed to ensure your and everyone else’s safety.</strong></p>
     </div>
