--- a/src/pages/solihull/severe-weather-accommodation/index.hbs
+++ b/src/pages/solihull/severe-weather-accommodation/index.hbs
@@ -40,7 +40,7 @@ location: solihull
         <li>They must agree to assistance under the SWEP procedure</li>
       </ul>
       <p>Should you require accommodation you can contact Solihull Community Housing on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) Any partner organisation or member of the public who identify a rough sleeper / potential rough sleeper can contact SCH on <a href="tel:0121 717 1515">0121 717 1515</a> (which offers a 24-hour service) or in an emergency the Police and other emergency services as appropriate).</p>
-      <p>If you are worried about someone you've seen sleeping rough in Solihull, you can alert Solihull’s Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://streetlink.org.uk">Streetlink</a> app.</p>
+      <p>If you are worried about someone you've seen sleeping rough in Solihull, you can alert Solihull’s Rough Sleeper Outreach Service via <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
 
     {{> social-share}}
 
