--- a/src/pages/stockport/index.hbs
+++ b/src/pages/stockport/index.hbs
@@ -43,7 +43,7 @@ location: stockport
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Stockport, you can alert the Council by emailing <a href="mailto:homechoice@stockporthomes.org">homechoice@stockporthomes.org</a> or by calling <a href="tel:01614744237">0161 474 4237</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Stockport, you can alert the Council by emailing <a href="mailto:homechoice@stockporthomes.org">homechoice@stockporthomes.org</a> or by calling <a href="tel:01614744237">0161 474 4237</a>. Alternatively, you can inform <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/stockport/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
