--- a/src/pages/walsall/severe-weather-accommodation/index.hbs
+++ b/src/pages/walsall/severe-weather-accommodation/index.hbs
@@ -29,7 +29,7 @@ location: walsall
       <p>During the periods of severe cold weather, additional emergency accommodation is provided by Walsall Local Authority. This is known as Severe Weather Emergency Provision (SWEP).</p>
       <p>Anyone finding themselves homeless and having to rough sleep can access this service when temperatures drop to zero degrees for more than three consecutive nights or more.</p>
       <p>You can access this service via contacting the Rough Sleepers Initiative Team on <a href="tel:01922 652250">01922 652250</a> or email <a href="mailto:rooflessreferral@walsall.gov.uk">rooflessreferral@walsall.gov.uk</a>.</p>
-      <p>You can also report any rough sleeping in Walsall Borough you have seen to the Local Authority outreach team via <a href="www.streetlink.org.uk">www.streetlink.org.uk</a>.</p>
+      <p>You can also report any rough sleeping in Walsall Borough you have seen to the Local Authority outreach team via <a href="https://thestreetlink.org.uk">https://thestreetlink.org.uk</a>.</p>
 
     {{> social-share}}
 
