--- a/src/pages/wolverhampton/severe-weather-accommodation/index.hbs
+++ b/src/pages/wolverhampton/severe-weather-accommodation/index.hbs
@@ -30,7 +30,7 @@ location: wolverhampton
       <p>This provision is made in addition to the usual offers of accommodation and support that are available in Wolverhampton.</p>
       <p>You can present at P3’s Navigator (43 School Street, Wolverhampton WV1 4LR) or call <a href="tel:0800 107 6753">0800 107 6753</a> if you are a rough sleeper or at risk of rough sleeping.</p>
       <p>Rough sleeper services will work with you the next working day to assess your options for accommodation and support.</p>
-      <p>Alternatively, any member of the public can contact the P3 Outreach team by raising an alert about an individual sleeping rough through the <a href="https://www.streetlink.org.uk/">Streetlink</a> website or app.</p>
+      <p>Alternatively, any member of the public can contact the P3 Outreach team by raising an alert about an individual sleeping rough through the <a href="https://thestreetlink.org.uk">Streetlink</a> website.</p>
       <p>If a person is in immediate danger or in need of urgent care, please call the emergency services.</p>
 
     {{> social-share}}
