--- a/src/pages/bradford/index.hbs
+++ b/src/pages/bradford/index.hbs
@@ -43,7 +43,7 @@ location: bradford
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bradford, you can alert No Second Night Out by emailing <a href="mailto:bradford@humankindcharity.org.uk">bradford@humankindcharity.org.uk</a>, calling <a href="tel:01274309165">01274309165</a> or via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bradford, you can alert No Second Night Out by emailing <a href="mailto:bradford@humankindcharity.org.uk">bradford@humankindcharity.org.uk</a>, calling <a href="tel:01274309165">01274309165</a> or via <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/bradford/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
