--- a/src/pages/bury/index.hbs
+++ b/src/pages/bury/index.hbs
@@ -43,7 +43,7 @@ location: bury
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bury, you can alert the Council on <a href="tel:01612535537">0161 253 5537</a>. Alternatively, you can inform Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Bury, you can alert the Council on <a href="tel:01612535537">0161 253 5537</a>. Alternatively, you can inform <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/bury/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
