--- a/src/pages/cambridgeshire/severe-weather-accommodation/index.hbs
+++ b/src/pages/cambridgeshire/severe-weather-accommodation/index.hbs
@@ -31,7 +31,7 @@ location: cambridgeshire
       <p>If you meet someone in Cambridge who needs a place to sleep at night you can:</p>
       <ul>
         <li>Contact the Street Outreach Team with details of where the rough sleeper can be found on <a href="tel:01223 366292">01223 366292</a> from 8am-4pm Mon-Fri</li>
-        <li>Use the Streetlink <a href="https://www.streetlink.org.uk/">website</a> or app</li>
+        <li>Use the Streetlink <a href="https://thestreetlink.org.uk">website</a>.</li>
         <li>Call the City Council’s Housing Advice Service on <a href="tel:01223 457918">01223 457918</a> 9-5.15pm Mon-Fri or out-of-hours on <a href="tel:0330 053 8109">0330 053 8109</a></li>
       </ul>
       <p>They can help refer someone to Crossways and access further specialist support.</p>
