--- a/src/pages/coventry/severe-weather-accommodation/index.hbs
+++ b/src/pages/coventry/severe-weather-accommodation/index.hbs
@@ -39,7 +39,7 @@ location: coventry
 
       <p>The next working day we will support you to weigh up the choices and options you have to find accommodation.</p>
 
-      <p>If you are worried about someone you've seen sleeping rough in Coventry, you can alert Coventry's Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</a></p>
+      <p>If you are worried about someone you've seen sleeping rough in Coventry, you can alert Coventry's Rough Sleeper Outreach Service via <a href="https://thestreetlink.org.uk">Streetlink</a>.</a></p>
 
     {{> social-share}}
 
