--- a/src/pages/reading/index.hbs
+++ b/src/pages/reading/index.hbs
@@ -43,7 +43,7 @@ location: reading
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Reading, you can alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Reading, you can alert the Council and St Mungo's Reading Rough Sleeper Outreach Service via <a href="https://thestreetlink.org.uk">Streetlink</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/reading/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
