adds volunteer for good section

--- a/src/pages/manchester/realchangemcr/about/index.hbs
+++ b/src/pages/manchester/realchangemcr/about/index.hbs
@@ -35,7 +35,7 @@ location: manchester
       <div class="block__section">
         <p class="text-center">Big Change MCR is a central fund to help people experiencing homelessness pay for practical items that they need to build independent lives away from the streets.</p>
         <p class="text-center">
-          <a href="https://localgiving.org/charity/macc/project/bigchangemcr/" class="btn btn--brand-d btn--full">
+          <a href="https://realchangemanchester.co.uk/" class="btn btn--brand-d btn--full">
             <span class="btn__text">Donate now</span>
           </a>
         </p>
