--- a/src/pages/manchester/realchangemcr/funding-process/index.hbs
+++ b/src/pages/manchester/realchangemcr/funding-process/index.hbs
@@ -249,7 +249,7 @@ location: manchester
 
 
         <p class="text-center">
-          <a href="https://localgiving.org/charity/macc/project/realchangemcr/" class="btn btn--brand-d btn--full">
+          <a href="https://realchangemanchester.co.uk/" class="btn btn--brand-d btn--full">
             <span class="btn__text">Donate now</span>
           </a>
         </p>
