--- a/src/pages/manchester/realchangemcr/index.hbs
+++ b/src/pages/manchester/realchangemcr/index.hbs
@@ -49,7 +49,7 @@ location: manchester
     <p>You can read about the people that Real Change MCR has helped by reading our <a href="/manchester/realchangemcr/case-studies/">case studies</a>.</p>
 
     <div class="block__cta block__cta--incopy block__cta--2">
-      {{>cta brand="d" icon="big-change" link="https://localgiving.org/charity/macc/project/realchangemcr/" name="Donate to Real Change MCR"}}
+      {{>cta brand="d" icon="big-change" link="https://realchangemanchester.co.uk/" name="Donate to Real Change MCR"}}
       {{>cta brand="d" icon="read" link="/manchester/realchangemcr/who-are-we" name="Find out more"}}
     </div>
   </div>
