--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -71,6 +71,9 @@ $brand-q: #f3f3f3;
 $brand-r: #0A8564;
 $brand-s: #E1B500;
 
+$gmmc-green: #3eaca7;
+$gmmc-blue: #005461;
+
 $big-change-a: #fff77a;
 $big-change-b: #404241;
 
@@ -91,6 +94,8 @@ $street-aid-yellow: #ffcf06;
 $street-aid-orange: #f5821f;
 
 $sea-blue: #00A6B0;
+
+$vfg-orange: #ffb533;
 
 $wmht-hero-lilac: #796e78;
 $wmht-lilac: #534b53;
