--- a/src/scss/partials/_images.scss
+++ b/src/scss/partials/_images.scss
@@ -51,6 +51,35 @@
   width: 100%;
 }
 
+.gmmc-logo {
+  height: 250px;
+
+  display: none;
+  @include mq($from: m) {
+    padding-top: 60px;
+    padding-right: 20px;
+    display: block;
+  }
+}
+
+.vol-for-good {
+  width: 250px;
+  float: right;
+  margin: 30px;
+  display: none;
+  @include mq($from: m) {
+    display: block;
+  }
+}
+
+.vol-for-good-logo {
+  width: 150px;
+  margin: 20px 20px;
+  @include mq($from: m) {
+    float: left;
+  }
+}
+
 .notts-street-aid-logo {
   display: none;
   float: right;
