--- a/src/pages/greater-manchester/volunteer-for-good/index.hbs
+++ b/src/pages/greater-manchester/volunteer-for-good/index.hbs
@@ -91,7 +91,7 @@ page: home
         </div>
         <img class="gmmc-logo" src="/assets/img/gmmc-logo.png" alt="gm mayors charity logo">
       </div>
-      <a href="#" class="btn btn--gmmc-blue">
+      <a href="https://gmmayorscharity.org.uk/donate" class="btn btn--gmmc-blue">
         <span class="btn__text">Donate</span>
       </a>
     </div>
