adds vol for good to give help

--- a/src/pages/greater-manchester/orgs-near-you/index.hbs
+++ b/src/pages/greater-manchester/orgs-near-you/index.hbs
@@ -19,7 +19,7 @@ page: home
 </div>
 
 <div class="block block--orgs-near-you-header">
-  <div class="container container--vol-for-good-header" style="height: 250px;">
+  <div class="container" style="height: 250px; padding: 0!important;">
     <h1 class="h1 block__header"><span>Organisations </span>Near You</h1>
   </div>
 </div>
