--- a/src/scss/partials/_block.scss
+++ b/src/scss/partials/_block.scss
@@ -260,21 +260,22 @@
 
 .block--orgs-near-you-header {
   @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@600&display=swap');
   color: #fff;
   border-bottom: 3px solid $vfg-orange;
 
   h1 {
     padding: 40px 0;
     font-family: "Barlow Semi Condensed";
-    font-weight: 800;
-    font-size: 4rem;
+    font-weight: 600;
+    font-size: 3rem;
     text-align: center;
     color: #fff !important;
     text-transform: uppercase;
-    line-height: 90px;
     @include mq($from: m) {
       padding: 50px 0;
       font-size: 5rem;
+      line-height: 90px;
     }
   }
   span {
