updates chelmsford families and col

--- a/src/pages/chelmsford/money-help-services/index.hbs
+++ b/src/pages/chelmsford/money-help-services/index.hbs
@@ -48,13 +48,13 @@ location: chelmsford
       <h2 class="h2">Peabody</h2>
       <ul>
         <li>Call on: <a href="tel:08002888883">0800 2888883</a></li>
-        <li>Website: <a target="_blank" href="https://www.peabody.org.uk/help-advice/cost-of-living-support">https://www.peabody.org.uk/help-advice/cost-of-living-support</a></li>
+        <li>Website: <a target="_blank" href="https://www.peabody.org.uk/">https://www.peabody.org.uk/</a></li>
       </ul>
 
       <h2 class="h2">Central Law CIC</h2>
       <ul>
         <li>Tel: <a href="tel:01245951300">01245 951300 </a></li>
-        <li>Website: <a target="_blank" href="https://centrallawcic.co.uk/contact-us/">https://centrallawcic.co.uk/contact-us/</a></li>
+        <li>Website: <a target="_blank" href="https://centrallawcic.co.uk/">https://centrallawcic.co.uk/</a></li>
         <li>Group for <a target="_blank" href="https://www.facebook.com/groups/housinglawadvice/">housing law advice</a>.</li>
       </ul>
 
@@ -112,7 +112,7 @@ location: chelmsford
       <h2 class="h2">Peabody</h2>
       <ul>
         <li>Tel: <a href="tel: 08002888883">0800 2888883</a>.</li>
-        <li><a target="_blank" href="https://www.peabody.org.uk/help-advice/benefits-and-budgeting">Benefits and budgets advice</a>.</li>
+        <li><a target="_blank" href="https://www.peabody.org.uk/supporting-you/benefits-and-budgeting/">Benefits and budgets advice</a>.</li>
         <li><a target="_blank" href="https://www.peabody.org.uk/your-home/safer-communities/tenant-and-family-support">Tenant and family advice</a>.</li>
       </ul>
 
@@ -148,7 +148,7 @@ location: chelmsford
       <h2 class="h2">Illegal Money Lending Team (National)</h2>
       <ul>
         <li>Tel: <a href="tel:0300555222">0300 555222</a>(24/7).</li>
-        <li>Website: <a target="_blank" href="https://www.stoploansharks.co.uk/(resourcestodownload)">https://www.stoploansharks.co.uk/(resourcestodownload)</a>.</li>
+        <li>Website: <a target="_blank" href="https://www.stoploansharks.co.uk/who-we-are/#:~:text=We%20have%20a%20100%25%20safe,in%20the%20strictest%20of%20confidence">https://www.stoploansharks.co.uk/who-we-are/#:~:text=We%20have%20a%20100%25%20safe,in%20the%20strictest%20of%20confidence</a>.</li>
         <li>Training and awareness sessions are available also for staff and community groups</li>
       </ul>
 
@@ -157,7 +157,7 @@ location: chelmsford
       <h2 class="h2">Peabody</h2>
       <ul>
         <li>Tel: <a href="0800 2888883">0800 2888883</a>.</li>
-        <li><a target="_blank" href="https://www.peabody.org.uk/help-advice/benefits-and-budgeting/energy-saving-advice-household-tips">Energy saving advice</a>.</li>
+        <li><a target="_blank" href="https://www.peabody.org.uk/supporting-you/are-you-ready-for-winter/">Energy saving advice</a>.</li>
       </ul>
 
       <h2 class="h2">Citizens Advice</h2>
@@ -175,11 +175,9 @@ location: chelmsford
       <h1 class="h1">Financial Capability and Learning About Money – Websites</h1>
 
       <ul>
-        <li><a target="_blank" href="https://www.moneyadviceservice.org.uk/en">Money and Pensions Services</a></li>
+        <li><a target="_blank" href="https://www.moneyhelper.org.uk/en?source=mas#">Money helper</a></li>
         <li><a target="_blank" href="https://www.citizensadvice.org.uk">Citizens Advice</a></li>
         <li><a target="_blank" href="https://www.moneysavingexpert.com">Money Saving Expert</a></li>
-        <li><a href="tel:0800 138 7777">Money Advice Service (phone number)</a>
-        <li>Website: <a target="_blank" href="https://www.moneyadviceservice.org.uk/en/articles/debt-health-check%23#">https://www.moneyadviceservice.org.uk/</a></li>
       </ul>
 
       <h1 class="h1">Drop-in and Other Help</h1>
@@ -219,20 +217,20 @@ location: chelmsford
         <li>https://www.growbaby.org/directory/growbaby-chelmsford</li>
       </ul>
 
-      <h2 class="h2">St Vincent de Paul Society</h2>
+      <h2 class="h2">SVP Springfield (st Vincent De Paul)</h2>
       <ul>
         <li>Beardsley Drive, Springfield, Chelmsford, CM1 6GQ</li>
-        <li>Tel: <a href="tel:07796393131">07796 393131</a> email: <a href="mailto:presidenta030408@svp.org.uk">presidenta030408@svp.org.uk</a>.</li>
-        <li>Website: <a target="_blank" href="https://www.svp.org.uk/">https://www.svp.org.uk/</a>.</li>
-        <li>White goods, furniture (including beds), kitchen equipment etc. List here: https://staugustinespringfield.org.uk/svp-furniture-project</li>
+        <li>Tel: <a href="tel:03300436474">03300436474</a> email: <a href="mailto:furniturespringfield@svp.org.uk">furniturespringfield@svp.org.uk</a>.</li>
+        <li>Website: <a target="_blank" href="https://www.svp.org.uk/?fbclid=IwAR2c_FZHufK7_9XzT5SmCb1DPmZfnn58QCvMDtBTD5Ht6RH0U3Dzz0sisQE">https://www.svp.org.uk/?fbclid=IwAR2c_FZHufK7_9XzT5SmCb1DPmZfnn58QCvMDtBTD5Ht6RH0U3Dzz0sisQE</a>.</li>
       </ul>
 
+      <h2 class="h2">White goods, furniture (including beds), kitchen equipment etc. List here:</h2>
       <h2 class="h2">Lighthouse Furniture Project LTD</h2>
       <ul>
         <li>25/27 Tallon Road, Brentwood, Essex, CM13 1TE</li>
         <li>Tel: <a href="tel:01277 222050">01277 222050</a></li>
         <li>Email: <a href="mailto:admin@lighthousefurniture.org">admin@lighthousefurniture.org</a></li>
-        <li>http://www.lighthousefurniture.org/</li>
+        <li>Website: <a href="http://www.lighthousefurniture.org/">http://www.lighthousefurniture.org/</a></li>
         <li>Opening hours: Monday: 9.30am – 4.30pm | Tuesday – Friday: 9.00am – 4.30pm | Saturday: 9.00am- 12.30pm</li>
         <li>(Telephone is not manned at the weekend) Offer discounted furniture, white goods and household products (including electrical items, kitchen ware and bedding). Some items may be free of charge depending on circumstance.</li>
       </ul>
