--- a/src/pages/greater-manchester/index.hbs
+++ b/src/pages/greater-manchester/index.hbs
@@ -21,9 +21,11 @@ page: home
 </div>
 
 <div class="block block--header block--gm-header">
-  <div class="container container--gm-header">
-    <h1 class="h1 block__header">Tackling Homelessness in Greater Manchester</h1>
-  </div>
+  <a href="https://gmhan.net">
+    <div class="container container--gm-header">
+      <h1 class="h1 block__header">Tackling Homelessness in Greater Manchester</h1>
+    </div>
+  </a>
 </div>
 
 <div class="block">
