removes partnership manager job

--- a/src/pages/about/jobs/index.hbs
+++ b/src/pages/about/jobs/index.hbs
@@ -31,9 +31,7 @@ page: jobs
       <p>We are a small team with a big mission - jobs that we are currently recruiting for are listed below. We also rely on volunteers, so if you are interested please get in touch with your skills and availability at <a href="mailto:admin@streetsupport.net">admin@streetsupport.net</a>.</p>
 
       <h2>Current Vacancies</h2>
-      <ul>
-        <li><a href="/about/jobs/partnership-manager">Partnership Manager</a></li>
-      </ul>
+      <p>We are not currently recruiting for any full or part time roles, but if you have UX design skills and are available for freelance work, please get in touch at <a href="mailto:jobs@streetsupport.net">jobs@streetsupport.net</a></p>
 
       {{> divider }}
 
