adds bury jobs board to vfg

--- a/src/pages/greater-manchester/orgs-near-you/index.hbs
+++ b/src/pages/greater-manchester/orgs-near-you/index.hbs
@@ -104,11 +104,12 @@ page: home
       <p>If you’re still curious about the sorts of roles out there, these are the job boards we recommend having a look through.</p><br>
       <h3 class="h3">Volunteering in Greater Manchester</h3>
       <ul>
-        <li><a href="https://www.actiontogether.org.uk/volunteering">Action Together (Oldham, Rochdale and Tameside)</a></li>
-        <li><a href="https://www.salfordcvs.co.uk/volunteer-opportunities">Salford CVS</a></li>
-        <li><a href="https://stockportvolunteerhub.org.uk/opportunities/volunteer-roles/">Stockport Volunteer Hub</a></li>
-        <li><a href="https://www.thrivetrafford.org.uk/volunteering-trafford/volunteering-opportunities/">Thrive Trafford</a></li>
-        <li><a href="https://manchestercommunitycentral.org/volunteer-centre-manchester/i-want-volunteer">Volunteer Centre Manchester</a></li>
+        <li>Volunteer through <a href="https://www.actiontogether.org.uk/volunteering">Action Together (Oldham, Rochdale and Tameside)</a></li>
+        <li><a href="https://www.vcconnectsystem.org.uk/BuryVcfaVMS2/VolunteerOpportunities/OpportunitySearch">VCFA - Bury</a> - (Volunteer job board)</li>
+        <li><a href="https://www.salfordcvs.co.uk/volunteer-opportunities">Salford CVS</a> - (Vounteer job board)</li>
+        <li><a href="https://stockportvolunteerhub.org.uk/opportunities/volunteer-roles/">Stockport Volunteer Hub</a> - (Vounteer job board)</li>
+        <li><a href="https://www.thrivetrafford.org.uk/volunteering-trafford/volunteering-opportunities/">Thrive Trafford</a> - (Vounteer job board)</li>
+        <li><a href="https://manchestercommunitycentral.org/volunteer-centre-manchester/i-want-volunteer">Volunteer Centre Manchester</a> - (Vounteer job board)</li>
       </ul>
       <h3 class="h3">Volunteering everywhere</h3>
       <ul>
@@ -124,6 +125,3 @@ page: home
   </div>
 {{> social-share}}
 </div>
-
-
-
